@@ -1056,8 +1056,41 @@ static void dbe_cleanup_lite(dbe_t *env) {
  * and lock the file to tell other parts we're initialized and
  * do not want recovery to stomp over us
  */
-void *dbe_init(void) {
+void *dbe_init(const char *directory) {
     u_int32_t flags = 0;
+    char norm_dir[PATH_MAX+1]; /* check normalized directory names */
+    char norm_home[PATH_MAX+1];/* see man realpath(3) for details */
+
+    if (NULL == realpath(directory, norm_dir)) {
+	    print_error(__FILE__, __LINE__,
+		    "error: cannot normalize path \"%s\": %s",
+		    directory, strerror(errno));
+	    exit(EX_ERROR);
+    }
+
+    if (NULL == realpath(bogohome, norm_home)) {
+	    print_error(__FILE__, __LINE__,
+		    "error: cannot normalize path \"%s\": %s",
+		    bogohome, strerror(errno));
+	    exit(EX_ERROR);
+    }
+
+    if (0 != strcmp(norm_dir, norm_home))
+    {
+	fprintf(stderr,
+		"ERROR: only one database _environment_ (directory) can be used at a time.\n"
+		"You CAN use multiple wordlists that are in the same directory.\n\n");
+	fprintf(stderr,
+		"If you need multiple wordlists in different directories,\n"
+		"you cannot use the transactional interface, but you must configure\n"
+		"the non-transactional interface, i. e. ./configure --disable-transactions\n"
+		"then type make clean, after that rebuild and install as usual.\n"
+		"Note that the data base will no longer be crash-proof in that case.\n"
+		"Please accept our apologies for the inconvenience.\n");
+	fprintf(stderr,
+		"\nAborting program\n");
+	exit(EX_ERROR);
+    }
 
     /* open lock file, needed to detect previous crashes */
     if (init_dbl(bogohome))
